Various minor fixes : status pills height, spacing for closed modifications

--- a/app/assets/stylesheets/discussions/_index.scss
+++ b/app/assets/stylesheets/discussions/_index.scss
@@ -23,6 +23,9 @@
   opacity:.5;
   }
   }
+  .modif-closed {
+    margin-top:54px;
+  }
 
 
 }
